# ROS-Nodes

./: .gitignore  Aditional Nodes  README.md  open me  our main goals.
Resources/pioneer_3dx_ros/data_saver/: CMakeLists.txt  ReadMe.md  package.xml  run  run_data_saver  run_paths.sh  see
Resources/pioneer_3dx_ros/data_saver/launch/: run.launch  save_topics.launch
Resources/pioneer_3dx_ros/data_saver/src/: multi_odom.cpp  odom_listener.cpp  odom_path.cpp  one_pioneer_path.cpp  state_saver.cpp  two_pioneers_path.cpp
Resources/pioneer_3dx_ros/laserscan_visualizer/: CMakeLists.txt  ReadMe.md  package.xml  run_laserimg_class
Resources/pioneer_3dx_ros/laserscan_visualizer/launch/: concatenate_images.launch  da-i.launch  laser_listener.launch  laserimage_class_listener.launch  save_topics.launch  save_topics_separated.launch
Resources/pioneer_3dx_ros/laserscan_visualizer/src/: bind_exact.cpp  laserimage.cpp  listener (copy).cpp  listener.cpp  listener_node.cpp  state_saver.cpp  try (copy).cpp
Resources/pioneer_3dx_ros/pioneer_control/: CMakeLists.txt  README.md  package.xml
Resources/pioneer_3dx_ros/pioneer_control/launch/: pioneer_control.launch  pioneer_joy_teleop.launch  pioneer_teleop.launch
Resources/pioneer_3dx_ros/pioneer_description/: CMakeLists.txt  README.md  package.xml
Resources/pioneer_3dx_ros/pioneer_description/RViz/: 1_robots_navigation_NavfnROS_DWALocalPlanner.rviz  1_robots_navigation_NavfnROS_TebLocalPlannerROS.rviz  2_robots_navigation_NavfnROS_DWALocalPlanner.rviz  3_robots_navigation_NavfnROS_DWALocalPlanner.rviz  4_robots_navigation_NavfnROS_DWALocalPlanner.rviz  5_robots_navigation_NavfnROS_DWALocalPlanner.rviz  DWA_vs_MPC.rviz  MPC_usage_one_pioneer.rviz  MPC_usage_two_pioneers.rviz  institut.rviz  multi_pioneer.rviz  one_pioneer_mapping.rviz  one_pioneer_nav.rviz  pioneer1.rviz  pioneer2.rviz  pioneer_mapping+teb.rviz  six_pioneer_nav.rviz  test.rviz  test_paths.rviz  test_real.rviz  three_pioneers_combined_local_planners.rviz  three_pioneers_ebp.rviz  three_pioneers_teb.rviz  two_pioneers_navigation_teb.rviz
Resources/pioneer_3dx_ros/pioneer_description/launch/: pioneer_description.launch  pioneer_freenect.launch  pioneer_initialization.launch  pioneer_rosaria.launch  test_machine.launch
Resources/pioneer_3dx_ros/pioneer_description/params/: a.yaml  b.yaml  created_yaml_poses_for_navigation.yaml  created_yaml_real_robots_for_mapping.yaml  created_yaml_real_robots_for_navigation.yaml  haidaaa.yaml  pioneer_mapping_pose_v1.yaml  pioneer_mapping_pose_v2.yaml  pioneer_poses.yaml  pioneer_poses_test_maze_4.1.yaml  real_robots.yaml  robots_names.yaml
Resources/pioneer_3dx_ros/pioneer_description/urdf/: README.md  multi_pioneer_kinect_real.urdf.xacro  pioneer_kinect.urdf.xacro  pioneer_kinect_real.urdf.xacro  pioneer_real.urdf.xacro
Resources/pioneer_3dx_ros/pioneer_double_nav/: CMakeLists.txt
Resources/pioneer_3dx_ros/pioneer_gazebo/: CMakeLists.txt  README.md
Resources/pioneer_3dx_ros/pioneer_gazebo/launch/: debug_level.config  gazebo_world.launch
Resources/pioneer_3dx_ros/pioneer_gazebo/map/: 20.06.pgm  20.06.yaml  20.06_v1.pgm  20.06_v1.yaml  50_minimum_score.pgm  50_minimum_score.yaml  gabi_finish.yaml  horrible_50.pgm  horrible_50.yaml  horrible_600.pgm  horrible_600.yaml  institut3.1.pgm  institut3.1.yaml  map_nav_combo.pgm  map_nav_combo.yaml  mapfimat.pgm  mapfimat.yaml  maze_three.yaml  (+33 more)
Resources/pioneer_3dx_ros/pioneer_gui/: CMakeLists.txt  da.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  pioneer_gui.pro  readme.txt  resources.qrc  start.sh
Resources/pioneer_3dx_ros/pioneer_key_teleop/: CMakeLists.txt  package.xml  resources.qrc
Resources/pioneer_3dx_ros/pioneer_nav2d/: CMakeLists.txt  README.md  package.xml
Resources/pioneer_3dx_ros/pioneer_to_goal/: CMakeLists.txt  README.md
destination_tools/coords_msgs/: CMakeLists.txt  package.xml
destination_tools/coords_msgs/msg/: Coords.msg
destination_tools/coords_sender/: CMakeLists.txt  package.xml
destination_tools/coords_sender/launch/: coord_loader.launch  coord_multiple_sender.launch  coord_sender.launch  coord_sender_one_robot_darknet.launch  coord_sender_one_robot_simple.launch  coord_sender_simple.launch  goal_sender.launch
destination_tools/coords_sender/src/: goal_sender.cpp  goal_sender.cpp.UO4441  goal_sender_simple.cpp
destination_tools/multi_nav/: CMakeLists.txt  package.xml
destination_tools/multi_nav/launch/: goal_hardcoded  goal_point_loader.launch  pioneer_goal.launch  send_goal.launch  send_goals.launch
destination_tools/multi_nav/param/: goal.yaml
destination_tools/multi_nav/src/: map_navigation.cpp  send_goal.cpp
object_recognition/ecto_ros/cmake/: CMakeLists.txt  pubsub_gen_wrap.cmake
pioneer_3dx_ros/graveyard_pacakges/robotnav_try/: frames.gv  package.xml
pioneer_3dx_ros/laserscan_visualizer/: CMakeLists.txt  run_visualizer
pioneer_3dx_ros/laserscan_visualizer/launch/: laser_class_listener.launch  laser_listener.launch
pioneer_3dx_ros/laserscan_visualizer/src/: listener.cpp  listener_node (copy).cpp
pioneer_3dx_ros/pioneer_nav2d/: CMakeLists.txt  README.md  package.xml
pioneer_3dx_ros/pioneer_nav2d/launch/: localisation_launcher.launch  single_navigation.launch
pioneer_3dx_ros/pioneer_nav2d/param/: base_local_planner_params.yaml  costmap_common_params_fast.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_fast.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
pioneer_3dx_ros/pioneer_to_goal/: CMakeLists.txt  aici_baiatu.md  package.xml  readme.md  run_five_pioneers_and_goal  run_one_pioneer_and_goal
pioneer_3dx_ros/pioneer_to_goal/frames/: frames.gv
pioneer_3dx_ros/pioneer_to_goal/launch/: five_pioneers_with_goal.rviz  gabi_merge_kinect.launch  goal_coords_loader.launch  model.launch  model_fake.launch  one_pioneer_with_goal.rviz  pioneer_goal_hardcoded.launch  pioneer_kinect_rviz_vis.launch  pioneer_world.launch  start_gazebo.launch
pioneer_3dx_ros/pioneer_to_goal/param/: goal.yaml
pioneer_3dx_ros/pioneer_to_goal/src/: map_navigation_darknet.cpp
(+698 files in other folders)
