<?xml version="1.0"?>
<package format="2">
  <name>pioneer_to_goal</name>
  <version>0.0.0</version>
  <description>The pioneer_to_goal package</description>

  <maintainer email="gabriel.tutu@gmail.com">gabriel</maintainer>

  <license>BSD</license>

  <author email="gabriel.tutu@gmail.com">gabriel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>

  <export>
  </export>
</package>
