<?xml version="1.0"?>
<package>
  <name>pioneer_control</name>
  <version>0.0.0</version>
  <description>The pioneer_control package</description>
  
  <maintainer email="gaby.tg96@gmail.com">Gabriel Tutu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>-->
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>

  </export>
</package>
