<?xml version="1.0"?>
<package>
  <name>pioneer_description</name>
  <version>0.0.0</version>
  <description>The pioneer_description package</description>

  <maintainer email="gaby.tg96@gmail.com">Gabriel Tutu</maintainer>

  <license>BSD</license>

  <author email="jenjen.chung88@gmail.com">Jen Jen Chung</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosaria</build_depend>
  <run_depend>rosaria</run_depend>

  <export>
  </export>
</package>
