<?xml version="1.0"?>
<package>
  <name>robotnav_try</name>
  <version>0.0.0</version>
  <description>The robotnav_try package</description>

  <maintainer email="eu.er@gmail.com">eu</maintainer>

  <license>BSD</license>

  <author email="toteu.er@gmail.com">eu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
